--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+
+/* .banner-container {
+  @apply flex flex-col items-center justify-center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+/* .banner-item {
+  @apply p-4;
+} */
+/* 
+.banner-item img {
+  @apply w-full h-full;
+} */ */
+
+.enquiryBtn::before {
+  transition: all .5s ease;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  border-radius: 20px;
+  left: 50%;
+  right: 50%;
+  opacity: 0;
+  content: "";
+  background-color: #0060C2;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
